# ThinkClock_Assignment_1

./: README.md  vercel.json
backend/: .env  .env.example  .env.production.example  database.py  main.py  pyproject.toml  requirements.txt
backend/models/: cell.py  schemas.py
backend/routers/: cells.py  eis.py
backend/services/: cell_service.py  cloudinary_service.py  impedance_service.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BodePlot.tsx  CellIdBarcode.tsx  CellImage.tsx  CellsList.tsx  ECMDiagram.tsx  ECMParamsTable.tsx  ElectricalParams.tsx  ErrorBoundary.tsx  FileUpload.tsx  LoadingSkeleton.tsx  MetaInfoForm.tsx  SoHDisplay.tsx
frontend/src/lib/: api.ts  env.ts
frontend/src/types/: modules.d.ts
